added hero background and font styl roboto

--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>Findtrend Webflow</title>
 </head>
 <body>
     <header class="header">
         <section class="header__logo">
-            <img src="/img/logoimg.png" alt="">
-            <h1>Findtrend</h1>
+            <img src="/img/logoimg.png" alt="findtrent-logo-green">
+            <span>Findtrend</span>
         </section>
         <section class="header__menu">
-            <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">How it work</a></li>
-                <li><a href="">Pricing</a></li>
-                <li><a href="">Solution</a></li>
-                <li><a href="">Features</a></li>
-            </ul>
+            <a href="#">About</a>
+            <a href="#">How it work</a>
+            <a href="#">Pricing</a>
+            <a href="#">Solution</a>
+            <a href="#">Features</a>
         </section>
         <section class="header__form-link">
             <div>
                 <a href="">Login</a>
             </div>
             <div>
-                <button>Register</button>
+                <a href="">Register</a>
             </div>
         </section>
     </header>
-    <main>
-        <section>Minimize</section>
+    <main class="main">
+        <section class="main__hero">
+            <h1>maxamixe</h1>
+        </section>
         <section>Open</section>
         <section>Findtrend helps</section>
         <section>Get your best</section>
@@ -40,14 +41,14 @@
     </main>
     <footer class="footer">
         <section class="footer__logo">
-            <img src="" alt="">logo
+            <img src="" alt="findtrend-logo-gray">logo
         </section>
         <section class="footer__link">
             <ul>
-                <li><a href="">Privacy Policy</a></li>
-                <li><a href="">Terms and Conditions</a></li>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Careers</a></li>
             </ul>
         </section>
     </footer>
