added images to folder

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
     <link rel="stylesheet" href="style.css">
     <title>Findtrend Webflow</title>
 </head>
@@ -32,12 +34,63 @@
     </header>
     <main class="main">
         <section class="main__hero">
-            <h1>maxamixe</h1>
+            <div>
+                <h1>Minimize your tabs.<br>
+                    Find the trends!
+                </h1>
+                <p>Don't let your computer's memory consume all of those browser tabs.</p>
+                <p>Findtrend lets you gather all of your favorite websites into one place.</p>
+                <a href="#">Get Started</a>
+            </div>
         </section>
-        <section>Open</section>
-        <section>Findtrend helps</section>
-        <section>Get your best</section>
-        <section>Join us</section>
+        <section>
+            <h2>Open new tabs is sh*t</h2>
+            <h3>Findtrend - Elon Musk</h3>
+            <p>A solution for your browser tabs and don't make your device get slower over time. Get ease and faster to discover a trend with just one tab.</p>
+        </section>
+        <section>
+            <h2>Findtrend helps you to increase your<br>
+                productivity and reduce your computer's<br>
+                memory load, <span>an application that can<br>
+                fulfill your daily browsing needs.</span>
+            </h2>
+            <h3>Findtrend make +1000 Startup grow</h3>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+        </section>
+        <section>
+            <h2>All platform connect to Findtrend</h2>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <div>icon</div>
+            <article>twitter post</article>
+            <article>twitter post</article>
+            <article>twitter post</article>
+            <button>View More Trend</button>
+        </section>
+        <section>
+            <h2>Get your best deal</h2>
+            <span>Monthly/Yearly</span>
+        </section>
     </main>
     <footer class="footer">
         <section class="footer__logo">
@@ -52,5 +105,7 @@
             </ul>
         </section>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
 </html>
