--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css">
     <title>Findtrend Webflow</title>
 </head>
@@ -14,90 +12,174 @@
     <header class="header">
         <section class="header__logo">
             <img src="/img/logoimg.png" alt="findtrent-logo-green">
-            <span>Findtrend</span>
+            <h1>Findtrend</h1>
         </section>
         <section class="header__menu">
-            <a href="#">About</a>
-            <a href="#">How it work</a>
-            <a href="#">Pricing</a>
-            <a href="#">Solution</a>
-            <a href="#">Features</a>
+            <ul class="header__menu-ul">
+                <li><a href="#">About</a></li>
+                <li><a href="#">How it work</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Solution</a></li>
+                <li><a href="#">Features</a></li>
+            </ul>
         </section>
         <section class="header__form-link">
             <div>
-                <a href="">Login</a>
+                <a href="#">Login</a>
             </div>
-            <div>
-                <a href="">Register</a>
+            <div class="header__form-register">
+                <a href="#">Register</a>
             </div>
         </section>
     </header>
     <main class="main">
-        <section class="main__hero">
+        <section class="hero">
             <div>
                 <h1>Minimize your tabs.<br>
                     Find the trends!
                 </h1>
                 <p>Don't let your computer's memory consume all of those browser tabs.</p>
                 <p>Findtrend lets you gather all of your favorite websites into one place.</p>
-                <a href="#">Get Started</a>
+                <div class="hero__btn">
+                    <a href="#">Get Started 🔥</a>
+                </div>
             </div>
         </section>
-        <section>
+        <section class="green-section">
             <h2>Open new tabs is sh*t</h2>
-            <h3>Findtrend - Elon Musk</h3>
-            <p>A solution for your browser tabs and don't make your device get slower over time. Get ease and faster to discover a trend with just one tab.</p>
+            <div class="green-section__out-container">
+                <div class="green-section__in-container">
+                    <img src="/img/Vector (1).png" alt="findtrend-icon">
+                    <h3>Findtrend - Elon Musk</h3>
+                    <div class="green-section__x">X</div>
+                </div>
+            </div>
+            <p class="green-section__text">A solution for your browser tabs and don't make your device get slower over time. Get<br>
+            ease and faster to discover a trend with just one tab.</p>
         </section>
-        <section>
-            <h2>Findtrend helps you to increase your<br>
-                productivity and reduce your computer's<br>
-                memory load, <span>an application that can<br>
-                fulfill your daily browsing needs.</span>
-            </h2>
+        <section class="social-proof">
+            <div class="social-proof__text-container">
+                <h2>Findtrend helps you to increase your<br>
+                    productivity and reduce your computer's<br>
+                    memory load, <span>an application that can<br>
+                    fulfill your daily browsing needs.</span>
+                </h2>
+            </div>
             <h3>Findtrend make +1000 Startup grow</h3>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
+            <div class="social-proof__companies">
+                <span class="social-proof__company"><img src="/img/image 116.png" alt="microsoft"></span>
+                <span class="social-proof__company"><img src="/img/image 128.png" alt="allianz"></span>
+                <span class="social-proof__company"><img src="/img/image 121.png" alt="upwork"></span>
+                <span class="social-proof__company"><img src="/img/image 119.png" alt="volvo"></span>
+                <span class="social-proof__company"><img src="/img/image 125.png" alt="grab"></span>
+                <span class="social-proof__company"><img src="/img/image 122.png" alt="verizon"></span>
+                <span class="social-proof__company"><img src="/img/image 133.png" alt="coinbase"></span>
+                <span class="social-proof__company"><img src="/img/image 129.png" alt="expedia"></span>
+                <span class="social-proof__company"><img src="/img/image 117.png" alt="airtable"></span>
+                <span class="social-proof__company"><img src="/img/image 126.png" alt="magento"></span>
+                <span class="social-proof__company"><img src="/img/image 120.png" alt="carrera"></span>
+                <span class="social-proof__company"><img src="/img/image 124.png" alt="bonanza"></span>
+                <span class="social-proof__company"><img src="/img/image 132.png" alt="wetransfer"></span>
+                <span class="social-proof__company"><img src="/img/image 127.png" alt="suzuki"></span>
+                <span class="social-proof__company"><img src="/img/image 118.png" alt="alglia"></span>
+                <span class="social-proof__company"><img src="/img/image 130.png" alt="heineken"></span>
+            </div>
         </section>
-        <section>
-            <h2>All platform connect to Findtrend</h2>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <div>icon</div>
-            <article>twitter post</article>
-            <article>twitter post</article>
-            <article>twitter post</article>
+        <section class="social-feed">
+            <div class="social-feed__title">
+                <h2>All platform connect to Findtrend</h2>
+            </div>
+            <div class="social-feed__icons">
+                <span class="social-feed--icon"><img src="/img/image 105.png" alt="facebook"></span>
+                <span class="social-feed--icon active-green"><img src="/img/image 96.png" alt="twitter"></span>
+                <span class="social-feed--icon"><img src="/img/Rectangle 6.png" alt="ball"></span>
+                <span class="social-feed--icon"><img src="/img/image 111.png" alt="pintrest"></span>
+                <span class="social-feed--icon"><img src="/img/image 113.png" alt="em"></span>
+                <span class="social-feed--icon"><img src="/img/image 114.png" alt="reddit"></span>
+                <span class="social-feed--icon"><img src="/img/image 115.png" alt="vk"></span>
+                <span class="social-feed--icon"><img src="/img/image 112.png" alt="linkedin"></span>
+            </div>
+            <article class="social-feed__posts">
+                <img src="/img/tweet 1.png" alt="twitter-post-1">
+                <img src="/img/tweet 2.png" alt="twitter-post-2">
+                <img src="/img/tweet 3.png" alt="twitter-post-3">
+            </article>
             <button>View More Trend</button>
         </section>
-        <section>
+        <section class="subscription">
             <h2>Get your best deal</h2>
-            <span>Monthly/Yearly</span>
+            <div class="sub__container">
+                <p class="sub__month active-white">Monthly</p>
+                <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+                <p class="sub__year">Yearly</p>
+            </div>
+            <div class="sub__card-container">
+                <div class="sub__card">
+                    <div class="sub__card--text">
+                        <h3>Personal</h3>
+                        <p>Special first packet for all</p>
+                        <hr>
+                        <p><span>$8</span>/Month</p>
+                        <ul>
+                            <li>Up to 5 page each group</li>
+                            <li>Up to 10 group page</li>
+                            <li>5 Days group saved</li>
+                        </ul>
+                        <a href="#">Start Free Trial</a>
+                    </div>
+                </div>
+                <div class="sub__card active-green">
+                    <div class="sub__card--text">
+                        <h3>Regular</h3>
+                        <p>Recommended for personal pro</p>
+                        <hr>
+                        <p><span>$20</span>/Month</p>
+                        <ul>
+                            <li>Up to 15 page each group</li>
+                            <li>Download page up to 20 page</li>
+                            <li>Up to 10 group page</li>
+                            <li>15 Days group page saved</li>
+                        </ul>
+                        <a class="active-black" href="#">Start Free Trial</a>
+                    </div>
+                </div>
+                <div class="sub__card">
+                    <div class="sub__card--text">
+                        <h3>Premium</h3>
+                        <p>Packet for Startup & Company</p>
+                        <hr>
+                        <p><span>$48</span>/Month</p>
+                        <ul>
+                            <li>Unlimited group pages</li>
+                            <li>Unlimited download page</li>
+                            <li>Unlimited page each group</li>
+                            <li>Customize sorting group page</li>
+                            <li>Customize group page name</li>
+                            <li>30 Days group page saved</li>
+                        </ul>
+                        <a href="#">Start Free Trial</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="call-to-act">
+            <h2>Join us on email for<br>
+            more trending topics</h2>
+            <div class="call-to-act__btn">
+                <a href="#">Join Now</a>
+            </div>
         </section>
     </main>
     <footer class="footer">
         <section class="footer__logo">
-            <img src="" alt="findtrend-logo-gray">logo
+            <img src="/img/Vector.png" alt="findtrend-logo-black">
+            <h3>Findtrend</h3>
         </section>
         <section class="footer__link">
-            <ul>
+            <ul class="footer__link-ul">
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms and Conditions</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -105,7 +187,5 @@
             </ul>
         </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
 </body>
 </html>
