minimum viable product complete. none responsive yet

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img src="/img/tweet 2.png" alt="twitter-post-2">
                 <img src="/img/tweet 3.png" alt="twitter-post-3">
             </article>
-            <button>View More Trend</button>
+            <button class="social-feed__btn">View More Trend</button>
         </section>
         <section class="subscription">
             <h2>Get your best deal</h2>
@@ -128,7 +128,7 @@
                             <li>Up to 10 group page</li>
                             <li>5 Days group saved</li>
                         </ul>
-                        <a href="#">Start Free Trial</a>
+                        <a class="sub__card--btn" href="#">Start Free Trial</a>
                     </div>
                 </div>
                 <div class="sub__card active-green">
@@ -143,7 +143,7 @@
                             <li>Up to 10 group page</li>
                             <li>15 Days group page saved</li>
                         </ul>
-                        <a class="active-black" href="#">Start Free Trial</a>
+                        <a class="sub__card--btn active-black" href="#">Start Free Trial</a>
                     </div>
                 </div>
                 <div class="sub__card">
@@ -160,17 +160,17 @@
                             <li>Customize group page name</li>
                             <li>30 Days group page saved</li>
                         </ul>
-                        <a href="#">Start Free Trial</a>
+                        <a class="sub__card--btn" href="#">Start Free Trial</a>
                     </div>
                 </div>
             </div>
         </section>
         <section class="call-to-act">
-            <h2>Join us on email for<br>
-            more trending topics</h2>
-            <div class="call-to-act__btn">
-                <a href="#">Join Now</a>
-            </div>
+            <h2>
+                Join us on email for<br>
+                <span>more trending topics</span>
+            </h2>
+            <a class="call-to-act__btn" href="#">Join Now</a>
         </section>
     </main>
     <footer class="footer">
