--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
             </div>
             <h3>Findtrend make +1000 Startup grow</h3>
             <div class="social-proof__companies">
-                <span class="social-proof__company"><img src="/img/image 116.png" alt="microsoft"></span>
-                <span class="social-proof__company"><img src="/img/image 128.png" alt="allianz"></span>
-                <span class="social-proof__company"><img src="/img/image 121.png" alt="upwork"></span>
-                <span class="social-proof__company"><img src="/img/image 119.png" alt="volvo"></span>
-                <span class="social-proof__company"><img src="/img/image 125.png" alt="grab"></span>
-                <span class="social-proof__company"><img src="/img/image 122.png" alt="verizon"></span>
-                <span class="social-proof__company"><img src="/img/image 133.png" alt="coinbase"></span>
-                <span class="social-proof__company"><img src="/img/image 129.png" alt="expedia"></span>
-                <span class="social-proof__company"><img src="/img/image 117.png" alt="airtable"></span>
-                <span class="social-proof__company"><img src="/img/image 126.png" alt="magento"></span>
-                <span class="social-proof__company"><img src="/img/image 120.png" alt="carrera"></span>
-                <span class="social-proof__company"><img src="/img/image 124.png" alt="bonanza"></span>
-                <span class="social-proof__company"><img src="/img/image 132.png" alt="wetransfer"></span>
-                <span class="social-proof__company"><img src="/img/image 127.png" alt="suzuki"></span>
-                <span class="social-proof__company"><img src="/img/image 118.png" alt="alglia"></span>
-                <span class="social-proof__company"><img src="/img/image 130.png" alt="heineken"></span>
+                <div class="social-proof__company"><img src="/img/image 116.png" alt="microsoft"></div>
+                <div class="social-proof__company"><img src="/img/image 128.png" alt="allianz"></div>
+                <div class="social-proof__company"><img src="/img/image 121.png" alt="upwork"></div>
+                <div class="social-proof__company"><img src="/img/image 119.png" alt="volvo"></div>
+                <div class="social-proof__company"><img src="/img/image 125.png" alt="grab"></div>
+                <div class="social-proof__company"><img src="/img/image 122.png" alt="verizon"></div>
+                <div class="social-proof__company"><img src="/img/image 133.png" alt="coinbase"></div>
+                <div class="social-proof__company"><img src="/img/image 129.png" alt="expedia"></div>
+                <div class="social-proof__company"><img src="/img/image 117.png" alt="airtable"></div>
+                <div class="social-proof__company"><img src="/img/image 126.png" alt="magento"></div>
+                <div class="social-proof__company"><img src="/img/image 120.png" alt="carrera"></div>
+                <div class="social-proof__company"><img src="/img/image 124.png" alt="bonanza"></div>
+                <div class="social-proof__company"><img src="/img/image 132.png" alt="wetransfer"></div>
+                <div class="social-proof__company"><img src="/img/image 127.png" alt="suzuki"></div>
+                <div class="social-proof__company"><img src="/img/image 118.png" alt="alglia"></div>
+                <div class="social-proof__company"><img src="/img/image 130.png" alt="heineken"></div>
             </div>
         </section>
         <section class="social-feed">
