added root to folder location

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <section class="header__logo">
-            <img src="/img/logoimg.png" alt="findtrent-logo-green">
+            <img src="./img/logoimg.png" alt="findtrent-logo-green">
             <h1>Findtrend</h1>
         </section>
         <section class="header__menu">
@@ -49,7 +49,7 @@
             <h2>Open new tabs is sh*t</h2>
             <div class="green-section__out-container">
                 <div class="green-section__in-container">
-                    <img src="/img/Vector (1).png" alt="findtrend-icon">
+                    <img src="./img/Vector (1).png" alt="findtrend-icon">
                     <h3>Findtrend - Elon Musk</h3>
                     <div class="green-section__x">X</div>
                 </div>
@@ -67,22 +67,22 @@
             </div>
             <h3>Findtrend make +1000 Startup grow</h3>
             <div class="social-proof__companies">
-                <div class="social-proof__company"><img src="/img/image 116.png" alt="microsoft"></div>
-                <div class="social-proof__company"><img src="/img/image 128.png" alt="allianz"></div>
-                <div class="social-proof__company"><img src="/img/image 121.png" alt="upwork"></div>
-                <div class="social-proof__company"><img src="/img/image 119.png" alt="volvo"></div>
-                <div class="social-proof__company"><img src="/img/image 125.png" alt="grab"></div>
-                <div class="social-proof__company"><img src="/img/image 122.png" alt="verizon"></div>
-                <div class="social-proof__company"><img src="/img/image 133.png" alt="coinbase"></div>
-                <div class="social-proof__company"><img src="/img/image 129.png" alt="expedia"></div>
-                <div class="social-proof__company"><img src="/img/image 117.png" alt="airtable"></div>
-                <div class="social-proof__company"><img src="/img/image 126.png" alt="magento"></div>
-                <div class="social-proof__company"><img src="/img/image 120.png" alt="carrera"></div>
-                <div class="social-proof__company"><img src="/img/image 124.png" alt="bonanza"></div>
-                <div class="social-proof__company"><img src="/img/image 132.png" alt="wetransfer"></div>
-                <div class="social-proof__company"><img src="/img/image 127.png" alt="suzuki"></div>
-                <div class="social-proof__company"><img src="/img/image 118.png" alt="alglia"></div>
-                <div class="social-proof__company"><img src="/img/image 130.png" alt="heineken"></div>
+                <div class="social-proof__company"><img src="./img/image 116.png" alt="microsoft"></div>
+                <div class="social-proof__company"><img src="./img/image 128.png" alt="allianz"></div>
+                <div class="social-proof__company"><img src="./img/image 121.png" alt="upwork"></div>
+                <div class="social-proof__company"><img src="./img/image 119.png" alt="volvo"></div>
+                <div class="social-proof__company"><img src="./img/image 125.png" alt="grab"></div>
+                <div class="social-proof__company"><img src="./img/image 122.png" alt="verizon"></div>
+                <div class="social-proof__company"><img src="./img/image 133.png" alt="coinbase"></div>
+                <div class="social-proof__company"><img src="./img/image 129.png" alt="expedia"></div>
+                <div class="social-proof__company"><img src="./img/image 117.png" alt="airtable"></div>
+                <div class="social-proof__company"><img src="./img/image 126.png" alt="magento"></div>
+                <div class="social-proof__company"><img src="./img/image 120.png" alt="carrera"></div>
+                <div class="social-proof__company"><img src="./img/image 124.png" alt="bonanza"></div>
+                <div class="social-proof__company"><img src="./img/image 132.png" alt="wetransfer"></div>
+                <div class="social-proof__company"><img src="./img/image 127.png" alt="suzuki"></div>
+                <div class="social-proof__company"><img src="./img/image 118.png" alt="alglia"></div>
+                <div class="social-proof__company"><img src="./img/image 130.png" alt="heineken"></div>
             </div>
         </section>
         <section class="social-feed">
@@ -90,19 +90,19 @@
                 <h2>All platform connect to Findtrend</h2>
             </div>
             <div class="social-feed__icons">
-                <span class="social-feed--icon"><img src="/img/image 105.png" alt="facebook"></span>
-                <span class="social-feed--icon active-green"><img src="/img/image 96.png" alt="twitter"></span>
-                <span class="social-feed--icon"><img src="/img/Rectangle 6.png" alt="ball"></span>
-                <span class="social-feed--icon"><img src="/img/image 111.png" alt="pintrest"></span>
-                <span class="social-feed--icon"><img src="/img/image 113.png" alt="em"></span>
-                <span class="social-feed--icon"><img src="/img/image 114.png" alt="reddit"></span>
-                <span class="social-feed--icon"><img src="/img/image 115.png" alt="vk"></span>
-                <span class="social-feed--icon"><img src="/img/image 112.png" alt="linkedin"></span>
+                <span class="social-feed--icon"><img src="./img/image 105.png" alt="facebook"></span>
+                <span class="social-feed--icon active-green"><img src="./img/image 96.png" alt="twitter"></span>
+                <span class="social-feed--icon"><img src="./img/Rectangle 6.png" alt="ball"></span>
+                <span class="social-feed--icon"><img src="./img/image 111.png" alt="pintrest"></span>
+                <span class="social-feed--icon"><img src="./img/image 113.png" alt="em"></span>
+                <span class="social-feed--icon"><img src="./img/image 114.png" alt="reddit"></span>
+                <span class="social-feed--icon"><img src="./img/image 115.png" alt="vk"></span>
+                <span class="social-feed--icon"><img src="./img/image 112.png" alt="linkedin"></span>
             </div>
             <article class="social-feed__posts">
-                <img src="/img/tweet 1.png" alt="twitter-post-1">
-                <img src="/img/tweet 2.png" alt="twitter-post-2">
-                <img src="/img/tweet 3.png" alt="twitter-post-3">
+                <img src="./img/tweet 1.png" alt="twitter-post-1">
+                <img src="./img/tweet 2.png" alt="twitter-post-2">
+                <img src="./img/tweet 3.png" alt="twitter-post-3">
             </article>
             <button class="social-feed__btn">View More Trend</button>
         </section>
@@ -175,7 +175,7 @@
     </main>
     <footer class="footer">
         <section class="footer__logo">
-            <img src="/img/Vector.png" alt="findtrend-logo-black">
+            <img src="./img/Vector.png" alt="findtrend-logo-black">
             <h3>Findtrend</h3>
         </section>
         <section class="footer__link">
