--- a/array/index.html
+++ b/array/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>test</h1>
-    <script src="./script-v1.js"></script>
+    <script src="./test.js"></script>
+    <!-- <script src="./script-v1.js"></script> -->
     <!-- <script src="./script-v2.js"></script> -->
 </body>
 </html>
