--- a/array/index.html
+++ b/array/index.html
@@ -10,6 +10,6 @@
     <h1>test</h1>
     <!-- <script src="./test.js"></script> -->
     <!-- <script src="./script-v1.js"></script> -->
-    <script src="./script-v2.js"></script>
+    <script src="./completed.js"></script>
 </body>
 </html>
