--- a/Random Quotes/index.html
+++ b/Random Quotes/index.html
@@ -17,9 +17,9 @@
             </h1>
             <div class="hover">
                 <ul class="left__dropdown select-names">
-                    <li>Andrew Tate</li>
+                    <!-- <li>Andrew Tate</li>
                     <li>Jim Rohn</li>
-                    <li>Voltaire</li>
+                    <li>Voltaire</li> -->
                 </ul>
             </div>
             <img class="image" src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Jim_rohn.jpg" alt="jim-rohn">
@@ -29,9 +29,7 @@
                 <button class="button">NEW QUOTE</button>
                 <div class="right__white-background">
                     <span class="quote-marks">"</span>
-                    <p class="right__quote">
-                        Click "NEW QUOTE" button.
-                    </p>
+                    <p class="right__quote"></p>
                     <span class="quote-marks quote-marks-right">"</span>
                 </div>
             </div>
