--- a/Cursor Fun/index.html
+++ b/Cursor Fun/index.html
@@ -8,10 +8,13 @@
     <title>Cursor Fun</title>
 </head>
 <body>
-    <h1>The quick brown fox</h1>
+    <h1>The quick brown fox<br>
+        <span>"shoot the brown fox"</span>
+    </h1>
     <div class="outer-circle"></div>
     <div class="middle-circle"></div>
     <div class="inner-circle"></div>
+    <div id="fox">brown fox</div>
     <script src="./script.js"></script>
 </body>
 </html>
