--- a/Cursor Fun/index.html
+++ b/Cursor Fun/index.html
@@ -8,6 +8,7 @@
     <title>Cursor Fun</title>
 </head>
 <body>
+    <button>Reset</button>
     <h1>The quick brown fox<br>
         <span>"shoot the brown fox"</span>
     </h1>
