--- a/Typewriter/index.html
+++ b/Typewriter/index.html
@@ -8,8 +8,7 @@
     <title>Typewriter</title>
 </head>
 <body>
-    <div class="highlight__background"></div>
-    <div class="highlight__container display">
+    <div class="highlight__container">
         <h1 id="hightlight__key">test</h1>
     </div>
     <div class="text__container">
