--- a/SimpleCalculator/index.html
+++ b/SimpleCalculator/index.html
@@ -12,8 +12,8 @@
         <h1>Javacript Calculator</h1>
         <h2>Super Simple</h2>
         <div>
-            <input id="first-number" type="text" placeholder="0">
-            <input id="second-number" type="text" placeholder="0">
+            <input id="first-number" type="text" placeholder="Enter Number">
+            <input id="second-number" type="text" placeholder="Enter Number">
             <button id="sumation">sum</button>
             <button id="subtraction">-</button>
             <button id="multiplication">x</button>
