--- a/SimpleCalculator/index.html
+++ b/SimpleCalculator/index.html
@@ -39,13 +39,17 @@
             <input class="game" type="checkbox" id="division-game" name="division-game" value="division-game">
             <label for="division-game"> Division Game</label><br>
             <button id="start">Start</button>
+            <button id="exit">Exit</button>
         </div>
         <div id="result-wrapper">
-            <h1 id="result"></h1>
+            <h1 id="result-game"></h1>
+        </div>
+        <div class="answer-wrapper">
+            <input id="answer-game" type="text" placeholder="Enter Answer">
+            <button id="submit">Submit</button>
+            <button id="restart">Restart</button>
         </div>
     </div>
-
-
     <img src="https://i.pinimg.com/originals/4d/0e/62/4d0e627274d8b05e8865714ae257a177.png" alt="saw-puppet">
     <script src="./script.js"></script>
 </body>
