--- a/FullCalculatorApp/index.html
+++ b/FullCalculatorApp/index.html
@@ -11,31 +11,11 @@
     <main class="calculator__container">
         <div class="calculator__device">
             <section class="calculator__display">
-                <div class="display"><h1>previous entries</h1></div>
-                <div class="display"><h1>current entries</h1></div>
+                <div class="previous-entries display"><h1></h1></div>
+                <div class="current-entries display"><h1></h1></div>
             </section>
-            <section class="calculator__small-buttons">
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-                <button>0</button>
-            </section>
-            <section class="calculator__large-buttons">
-                <button>=</button>
-                <button>(Game)</button>
-            </section>
+            <section class="calculator__small-buttons"></section>
+            <section class="calculator__large-buttons"></section>
         </div>
     </main>
     <script src="./script.js"></script>
