--- a/SimpleCalculator/index.html
+++ b/SimpleCalculator/index.html
@@ -49,8 +49,29 @@
             <button id="submit">Submit</button>
             <button id="restart">Restart</button>
         </div>
+        <h2 class="virus-message">Answer correctly in <span class="virus-seconds">xx</span> seconds or else...</h2>
     </div>
-    <img src="https://i.pinimg.com/originals/4d/0e/62/4d0e627274d8b05e8865714ae257a177.png" alt="saw-puppet">
+    <img class="puppet" src="https://i.pinimg.com/originals/4d/0e/62/4d0e627274d8b05e8865714ae257a177.png" alt="saw-puppet">
+    <section class="download-bar">
+        <div class="download-bar__arrow-wrapper">
+            <i class="fa-solid fa-down-long"></i>
+        </div>
+        <div class="download-bar__container">
+            <div class="download-bar__left-column">
+                <div class="download-bar__circle-image"></div>
+                <img class="download-bar__exe-image" src="https://shared-files.whatpulse.org/app_logos/windows-shell-experience-host.png" alt="download">
+                <p class="download-bar__file-name">Virus.exe</p>
+                <div class="download-bar__chevron-wrapper">
+                    <i class="fa-solid fa-chevron-up"></i>
+                </div>
+            </div>
+            <div class="download-bar__right-column">
+                <button class="download-bar__button">Show all</button>
+                <i class="fa-solid fa-xmark"></i>
+            </div>
+        </div>
+    </section>
     <script src="./script.js"></script>
+    <script src="https://kit.fontawesome.com/c2ac856e3e.js" crossorigin="anonymous"></script>
 </body>
 </html>
