--- a/SimpleCalculator/index.html
+++ b/SimpleCalculator/index.html
@@ -47,9 +47,9 @@
         <div class="answer-wrapper">
             <input id="answer-game" type="text" placeholder="Enter Answer">
             <button id="submit">Submit</button>
-            <button id="restart">Restart</button>
+            <!-- <button id="restart">Restart</button> -->
         </div>
-        <h2 class="virus-message">Answer correctly in <span class="virus-seconds">xx</span> seconds or else...</h2>
+        <h2 class="download-message">Answer correctly in <span class="download-seconds"></span> seconds or else...</h2>
     </div>
     <img class="puppet" src="https://i.pinimg.com/originals/4d/0e/62/4d0e627274d8b05e8865714ae257a177.png" alt="saw-puppet">
     <section class="download-bar">
