--- a/FullCalculatorApp/index.html
+++ b/FullCalculatorApp/index.html
@@ -11,8 +11,8 @@
     <main class="calculator__container">
         <div class="calculator__device">
             <section class="calculator__display">
-                <div class="previous-entries display"><h1></h1></div>
-                <div class="current-entries display"><h1></h1></div>
+                <div class="top-entries display"><h1></h1></div>
+                <div class="bottom-entries display"><h1></h1></div>
             </section>
             <section class="calculator__small-buttons"></section>
             <section class="calculator__large-buttons"></section>
