--- a/ToDoApp/index.html
+++ b/ToDoApp/index.html
@@ -8,7 +8,21 @@
     <title>To Do App</title>
 </head>
 <body>
-    <h1>To Do App</h1>
+    <section class="todoapp-container">
+        <div class="todoapp-header">
+            <h1 class="todoapp-title">To Do App</h1>
+        </div>
+        <div class="todoapp-body">
+            <div class="todoapp-body__wrapper">
+                <input class="todoapp-body__input" type="text" placeholder="Add item...">
+                <ul>
+                    <li>test1</li>
+                    <li>test2</li>
+                    <li>test3</li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <script src="./script.js"></script>
 </body>
 </html>
