--- a/Pomodoro App/index.html
+++ b/Pomodoro App/index.html
@@ -14,6 +14,7 @@
         </section>
         <section class="pomodoro-section">
             <div>
+                <h2>Working on: "name of task from the list"</h2> <!--this appears when clicking on PMDR button on to do task list-->
                 <h2>"PMDR" a task and press Start!</h2>
                 <div>
                     <h3>Pomodoro:</h3>
@@ -40,6 +41,7 @@
                     </label>
                 </div>
                 <div>
+                    <h3>Time to work!</h3> <!--when timer start, this appears-->
                     <h4>25:00</h4>
                     <div>
                         <button>start/pause</button>
